[gd_scene load_steps=4 format=3 uid="uid://di8lw32eg75di"]

[ext_resource type="Script" uid="uid://dyhguts5bk2hs" path="res://scripts/LocationDetailDisplay.gd" id="1_pfqb3"]
[ext_resource type="Texture2D" uid="uid://cix458gbp074d" path="res://assets/map/frame.png" id="1_pobot"]
[ext_resource type="Theme" uid="uid://bv7il7gikunta" path="res://themes/default_theme.tres" id="2_5xmid"]

[node name="LocationDetailDisplay" type="Control"]
custom_minimum_size = Vector2(256, 128)
layout_mode = 3
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -280.0
offset_top = -152.0
offset_right = -24.0
offset_bottom = -24.0
grow_horizontal = 0
grow_vertical = 0
script = ExtResource("1_pfqb3")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 4
theme_override_constants/margin_top = 4
theme_override_constants/margin_right = 4
theme_override_constants/margin_bottom = 4

[node name="ColorRect" type="ColorRect" parent="MarginContainer"]
layout_mode = 2
color = Color(0.768627, 0.678431, 0.54902, 1)

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/MarginContainer"]
layout_mode = 2

[node name="BiomeLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_5xmid")

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_5xmid")

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_5xmid")
text = "distance: "

[node name="DistanceLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("2_5xmid")

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme = ExtResource("2_5xmid")

[node name="Label" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_5xmid")
text = "visited: "

[node name="VisitedLabel" type="Label" parent="MarginContainer/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("2_5xmid")

[node name="NinePatchRect" type="NinePatchRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_pobot")
patch_margin_left = 16
patch_margin_top = 16
patch_margin_right = 16
patch_margin_bottom = 16
